--- a/public/index.html
+++ b/public/index.html
@@ -797,12 +797,13 @@
                         pdfContainer.id = 'pdfContainer';
                         pdfContainer.style.fontFamily = 'Tajawal, Arial, sans-serif';
                         pdfContainer.style.direction = 'rtl';
-                        pdfContainer.style.width = '190mm'; // عرض A4 مطروحًا الهوامش
-                        pdfContainer.style.padding = '10mm';
+                        pdfContainer.style.width = '194mm'; // عرض A4 مطروحًا الهوامش (210mm - 2×8mm)
+                        pdfContainer.style.padding = '8mm';
                         pdfContainer.style.background = '#fff';
-                        pdfContainer.style.fontSize = '14px'; // حجم خط مناسب
+                        pdfContainer.style.fontSize = '14px';
                         pdfContainer.style.lineHeight = '1.6';
                         pdfContainer.style.display = 'none';
+                        pdfContainer.style.border = '1px solid #E0E0E0'; // إطار خفيف للصفحة
                         document.body.appendChild(pdfContainer);
 
                         // إضافة CSS للطباعة
@@ -811,24 +812,26 @@
                             @media print {
                                 @page {
                                     size: A4;
-                                    margin: 10mm;
+                                    margin: 8mm;
                                 }
                                 body > *:not(#pdfContainer) { display: none; }
                                 #pdfContainer { display: block !important; }
                                 .group { page-break-before: always; margin-bottom: 10px; }
                                 .group:first-child { page-break-before: avoid; }
-                                .header { background: #1A3C6E; color: #fff; padding: 8px; text-align: center; margin-bottom: 15px; border-radius: 4px; }
-                                h1 { font-size: 18px; margin: 0; }
-                                h2 { font-size: 16px; color: #1A3C6E; margin: 10px 0 5px; }
+                                .header { background: #003366; color: #fff; padding: 10px; text-align: center; margin-bottom: 15px; border-radius: 4px; position: relative; }
+                                .logo { position: absolute; left: 10px; top: 10px; width: 40px; height: 40px; }
+                                h1 { font-size: 18px; margin: 5px 0; }
+                                h2 { font-size: 16px; color: #003366; margin: 10px 0 5px; }
                                 h3 { font-size: 14px; color: #333; margin: 8px 0 4px; }
-                                hr { border: 0.5px solid #1A3C6E; margin: 5px 0; }
-                                table { width: 100%; border-collapse: collapse; margin: 8px 0; }
-                                th, td { border: 1px solid #ddd; padding: 6px; text-align: right; font-size: 14px; }
-                                th { background: #1A3C6E; color: #fff; }
-                                td { background: #F8F9FA; }
-                                .footer { position: fixed; bottom: 5mm; width: 100%; text-align: center; font-size: 12px; color: #666; }
+                                hr { border: 0.5px solid #003366; margin: 5px 0; }
+                                table { width: 100%; border-collapse: collapse; margin: 10px 0; }
+                                th, td { border: 1px solid #D0D7DE; padding: 8px; text-align: right; font-size: 14px; }
+                                th { background: #003366; color: #fff; }
+                                td { background: #F9FAFB; }
+                                .footer { position: fixed; bottom: 4mm; width: 194mm; text-align: center; font-size: 12px; color: #666; border-top: 1px solid #E0E0E0; padding-top: 2px; }
                                 p { margin: 4px 0; }
-                                .content { margin: 0 5px; } // هامش داخلي صغير
+                                .content { margin: 0 5px; } // هامش داخلي
+                                .group-title { background: #F1F5F9; padding: 8px; text-align: center; font-size: 16px; color: #003366; border-bottom: 2px solid #003366; margin-bottom: 10px; }
                             }
                         `;
                         document.head.appendChild(style);
@@ -836,11 +839,18 @@
                         // دالة لإضافة قسم
                         const addSection = (title, items, isTable = false, isSubsection = false) => {
                             const section = document.createElement('div');
-                            if (!isSubsection) section.className = 'group'; // فقط المجموعات الرئيسية تبدأ بصفحة جديدة
-                            const titleEl = document.createElement(isSubsection ? 'h3' : 'h2');
-                            titleEl.textContent = title;
-                            section.appendChild(titleEl);
-                            section.appendChild(document.createElement('hr'));
+                            if (!isSubsection) section.className = 'group';
+                            if (!isSubsection) {
+                                const groupTitle = document.createElement('div');
+                                groupTitle.className = 'group-title';
+                                groupTitle.textContent = title;
+                                section.appendChild(groupTitle);
+                            } else {
+                                const titleEl = document.createElement('h3');
+                                titleEl.textContent = title;
+                                section.appendChild(titleEl);
+                                section.appendChild(document.createElement('hr'));
+                            }
 
                             const content = document.createElement('div');
                             content.className = 'content';
@@ -873,8 +883,10 @@
                         const header = document.createElement('div');
                         header.className = 'header';
                         header.innerHTML = `
+                            <img class="logo" src="${pdfData.companyInfo.logo}" alt="Logo" onerror="this.style.display='none'"/>
                             <h1>تقرير تكاليف البناء</h1>
-                            <p style="font-size:14px">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
+                            <p style="font-size:14px; margin: 2px 0;">إعداد: ${pdfData.companyInfo.name}</p>
+                            <p style="font-size:14px; margin: 2px 0;">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
                         `;
                         pdfContainer.appendChild(header);
 
@@ -938,11 +950,11 @@
                         addSection(pdfData.materialPrices.title, materialItems);
 
                         // إضافة تذييل للترقيم
-                        const groups = document.querySelectorAll('.group').length; // عدد المجموعات الرئيسية
+                        const groups = document.querySelectorAll('.group').length;
                         document.querySelectorAll('.group').forEach((group, index) => {
                             const footer = document.createElement('div');
                             footer.className = 'footer';
-                            footer.textContent = `صفحة ${index + 1} من ${groups}`;
+                            footer.textContent = `صفحة ${index + 1} من ${groups} - ${pdfData.companyInfo.name}`;
                             group.appendChild(footer);
                         });
 
@@ -961,7 +973,6 @@
                         resultContainer.style.display = 'block';
                     }
                 }, { once: true });
-
 
             } catch (error) {
                 console.error('خطأ أثناء معالجة النموذج:', error);
