--- a/public/index.html
+++ b/public/index.html
@@ -797,16 +797,20 @@
                         pdfContainer.id = 'pdfContainer';
                         pdfContainer.style.fontFamily = 'Tajawal, Arial, sans-serif';
                         pdfContainer.style.direction = 'rtl';
-                        pdfContainer.style.width = '210mm'; // عرض A4 الكامل
-                        pdfContainer.style.height = '297mm'; // ارتفاع A4 (لضمان التحكم الكامل)
-                        pdfContainer.style.margin = '0';
+                        pdfContainer.style.width = '794px'; // 210mm × 3.78px/mm = 794px
+                        pdfContainer.style.height = '1123px'; // 297mm × 3.78px/mm = 1123px
+                        pdfContainer.style.margin = '0 !important';
                         pdfContainer.style.padding = '0';
                         pdfContainer.style.background = 'linear-gradient(to bottom, #FDF6E3 0%, #FFF1E0 100%)';
                         pdfContainer.style.fontSize = '14px';
                         pdfContainer.style.lineHeight = '1.5';
                         pdfContainer.style.display = 'none';
                         pdfContainer.style.border = '1px solid #C19A6B'; // إطار ذهبي
-                        pdfContainer.style.boxSizing = 'border-box'; // الإطار ضمن الأبعاد
+                        pdfContainer.style.boxSizing = 'border-box';
+                        pdfContainer.style.position = 'absolute';
+                        pdfContainer.style.top = '0';
+                        pdfContainer.style.left = '0';
+                        pdfContainer.style.overflow = 'hidden'; // قص الزائد
                         document.body.appendChild(pdfContainer);
                 
                         // إضافة CSS للطباعة
@@ -815,10 +819,23 @@
                             @media print {
                                 @page {
                                     size: A4;
-                                    margin: 0mm; /* هوامش صفرية */
+                                    margin: 0mm !important;
+                                }
+                                body {
+                                    margin: 0 !important;
+                                    padding: 0 !important;
+                                    overflow: hidden !important;
                                 }
                                 body > *:not(#pdfContainer) { display: none; }
-                                #pdfContainer { display: block !important; position: absolute; top: 0; left: 0; }
+                                #pdfContainer {
+                                    display: block !important;
+                                    width: 794px !important;
+                                    height: 1123px !important;
+                                    position: absolute;
+                                    top: 0 !important;
+                                    left: 0 !important;
+                                    overflow: hidden !important;
+                                }
                                 .group { page-break-before: always; margin: 0; padding: 0; }
                                 .group:first-child { page-break-before: avoid; }
                                 .header { background: #9B2D30; color: #FFF; padding: 5px; text-align: center; margin: 0 0 5px 0; border-radius: 2px; position: relative; }
@@ -832,7 +849,7 @@
                                 th, td { border: 1px solid #DBC2A4; padding: 4px; text-align: right; font-size: 12px; }
                                 th { background: #9B2D30; color: #FFF; }
                                 td { background: #FDF6E3; }
-                                .footer { position: fixed; bottom: 1mm; width: 210mm; text-align: center; font-size: 10px; color: #4B3C2E; border-top: 1px dashed #C19A6B; padding-top: 1px; }
+                                .footer { position: fixed; bottom: 4px; width: 794px; text-align: center; font-size: 10px; color: #4B3C2E; border-top: 1px dashed #C19A6B; padding-top: 1px; }
                                 p { margin: 2px 0; }
                                 .content { margin: 0 2px; background: #FFF; padding: 4px; }
                             }
